--- a/pages/image.module.css
+++ b/pages/image.module.css
@@ -3,12 +3,12 @@
     background-repeat: no-repeat;
     width:400px;
     height:400px;
-    background-image: url('./../images/image.jpg')
+    background-image: url('../static/image.jpg')
 }
 
 @media (-webkit-min-device-pixel-ratio: 2),
 (min-resolution: 192dpi) {
     .backgroundImage{
-        background-image: url('./../images/image@2x.jpg');
+        background-image: url('../static/image@2x.jpg');
     }
 }
